force-app/main/default/objects/MalhaVoo__c/MalhaVoo__c.object-meta.xml
<CustomObject>
    <label>Malha de Voo</label>
    <nameField>
        <displayFormat>MV-{000000}</displayFormat>
        <label>Malha de Voo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Malhas de Voos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>