force-app/main/default/objects/MalhaVoo__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destino</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Malhas de Voos (Destino)</relationshipLabel>
    <relationshipName>MalhasVoosDestino</relationshipName>
    <type>Lookup</type>
</CustomField>