force-app/main/default/objects/MalhaVoo__c/fields/Domingo__c.field-meta.xml
<CustomField>
    <fullName>Domingo__c</fullName>
    <label>Domingo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Programacao</valueSetName>
    </valueSet>
</CustomField>