force-app/main/default/objects/MalhaVoo__c/fields/Duracao__c.field-meta.xml
<CustomField>
    <fullName>Duracao__c</fullName>
    <inlineHelpText>Duração do voo em minutos que será exibido na pesquisa de malha de voo</inlineHelpText>
    <label>Duração</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>