force-app/main/default/objects/MalhaVoo__c/fields/NumeroAssentos__c.field-meta.xml
<CustomField>
    <fullName>NumeroAssentos__c</fullName>
    <description>Número máximo de assentos disponibilizados para a malha de voo</description>
    <label>Número de Assentos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>