force-app/main/default/objects/MalhaVoo__c/fields/OperadorMalha__c.field-meta.xml
<CustomField>
    <fullName>OperadorMalha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operador Malha</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Malhas de Voos</relationshipLabel>
    <relationshipName>MalhasVoos</relationshipName>
    <type>Lookup</type>
</CustomField>