force-app/main/default/objects/MalhaVoo__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origem</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Malhas de Voos</relationshipLabel>
    <relationshipName>MalhasVoosOrigem</relationshipName>
    <type>Lookup</type>
</CustomField>