force-app/main/default/objects/MalhaVoo__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ShuttleSeat</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Malhas de Voos</relationshipLabel>
    <relationshipName>Malhas_de_Voos</relationshipName>
    <type>Lookup</type>
</CustomField>