force-app/main/default/objects/MalhaVoo__c/fields/QuartaFeira__c.field-meta.xml
<CustomField>
    <fullName>QuartaFeira__c</fullName>
    <label>Quarta-feira</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Programacao</valueSetName>
    </valueSet>
</CustomField>