force-app/main/default/objects/MalhaVoo__c/fields/Sabado__c.field-meta.xml
<CustomField>
    <fullName>Sabado__c</fullName>
    <label>Sabado</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Programacao</valueSetName>
    </valueSet>
</CustomField>