force-app/main/default/objects/MalhaVoo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Produto__c</columns>
    <columns>DataInicio__c</columns>
    <columns>DataFim__c</columns>
    <columns>Ativa__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>